<resources>
    <string name="app_name">lab3</string>
    <string name="to_second">To second</string>
    <string name="to_first">To first</string>
    <string name="to_third">To third</string>
    <string name="information">Name: Pham Ba Nam\n Group: 3530901/90001</string>
    <string name="activity_about">Activity About</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Acativity3</string>
    <string name="again_to_third">Again to third</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
</resources>